End of first day - working TODO list with minor features

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <title>My App</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>TODOmithril</title>
 </head>
 <body>
 
