--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
 <div id="app"></div>
 
 <script src="/js/vendor-bundle.js"></script>
+<script src="//cdn.jsdelivr.net/velocity/1.0.0/velocity.min.js"></script>
 <script src="/js/app-bundle.js"></script>
 </body>
 </html>
